<resources>
    <string name="app_name">Väsby Frisören</string>
    <string name="home">Home</string>
    <string name="calendar">Calendar</string>
    <string name="myBooking">BOKNING</string>
    <string name="person">Person</string>
    <string name="qr_code">QR-code</string>
    <string name="registrera">Registrera</string>

    <string name="gl_mt_l_senord">Glömt lösenord</string>
    <string name="password">Password</string>
    <string name="email"><font size="50">Email</font></string>
    <string name="inloggning">Inloggning</string>
    <string name="f_rnamn">Förnamn</string>
    <string name="efternamn">Efternamn</string>
    <string name="welcome">Välkommen!</string>

    <string name="logga_in">Logga in</string>
    <string name="logga_in2"><font size="50">Logga in</font></string>
    <string name="telefon_nr"><font size="50">Telefon nr</font></string>
    <string name="forgotten_password">Glömt lösenord?</string>
    <string name="password2"><font size="50">Lösenord</font></string>
    <string name="create_account">Skapa ett konto</string>
    <string name="firstname"><font size="50">Förnamn</font></string>
    <string name="secondname"><font size="50">Efternamn</font></string>
    <string name="confirmPass"><font size="50">Bekräfta lösenord</font></string>
    <string name="orText">ELLER</string>

    <string name="phone_info_text">När du trycker på "fortsätt". Väsby friösren skickar ett sms med verifieringskod. Meddelande- och datahastigheter kan tillkomma. Det verifierade telefonnumret kan användas för att logga in</string>
    <string name="continueString">Fortsätt</string>
    <string name="policy_and_cookie">Genom att klicka på fortsätt godkänner du våra villkor. Lär dig hur vi behandlar dina uppgifter i vår integritetspolicy och vår cookiepolicy</string>
    <string name="resend_code">Skicka om koden</string>
    <string name="zero">0</string>
    <string name="bigText_notification">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book</string>
    <string name="verify_text">Ange sms-verifieringskoden nedan. Koden skickades till din mobiltelefon.</string>
    <string name="deleteAcc">Radera konto</string>
    <string name="save">Spara</string>

    <string name="account_settings">Konto inställningar</string>
    <string name="mybooking_empty_title">Finns ingenting här! </string>
    <string name="empty_mybooking_desc">Testa att uppdatera sidan, annars har du ingen bokning.</string>
    <string name="newItem">Nytt</string>
    <string name="notifikation">NOTIFIKATION</string>
    <string name="service_hint">Sök efter service</string>
    <string name="auto_complete_hint">Välj dag</string>
    <string name="day">Dag</string>
    <string name="time">Tid</string>
    <string name="barber_question">Vem vill du klippa hos?</string>
    <string name="time_and_date_title">Välj tid och datum</string>
    <string name="confirm_book">BOKA</string>
    <string name="extra_service">Extra service</string>

    <string name="first_barber">George Challita</string>
    <string name="second_barber">Salim Georgos</string>
    <string name="third_barber">Najwa Daoud</string>
    <string name="my_booking">Mina bokningar</string>
    <string name="settings">Inställningar</string>
    <string name="service_history">Tjänst historik</string>
    <string name="produkter_hint">Sök efter produkter</string>
    <string name="settings_hint">Sök efter inställningar</string>
    <string name="time_slot_information">Notera att tiden ovan kommer att justeras beronde på frisör</string>
    <string name="my_profile">Min profil</string>
    <string name="no">Nej</string>
    <string name="yes">Ja</string>

    <string-array name="barbers">
        <item>@string/first_barber</item>
        <item>@string/second_barber</item>
        <item>@string/third_barber</item>
    </string-array>
</resources>