<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/profile_background">

    <RelativeLayout
        android:id="@+id/profile_div"
        android:layout_width="match_parent"
        android:layout_height="300dp">

        <LinearLayout
            android:id="@+id/profile_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/eerie_black"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/backbutton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="25dp"
                android:src="@drawable/back_arrow" />

            <!--<de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_below="@+id/backbutton"
                android:layout_centerHorizontal="true"
                android:src="@drawable/profile_img_test" /> -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="bottom"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/roboto_light"
                android:text="@string/my_profile"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/profile_top_middle_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Namn efternamn"
                android:textColor="@color/white"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/profile_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="email@hotmail.com"
                android:textColor="@color/grey_white" />

            <TextView
                android:id="@+id/profile_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Poäng: 0"
                android:textColor="@color/grey_white" />

            <SearchView
                android:id="@+id/search_settings"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/searchbar_rounded"
                android:fontFamily="@font/roboto_regular"
                android:iconifiedByDefault="false"
                android:maxLength="20"
                android:queryBackground="@color/platinum"
                android:queryHint="@string/settings_hint"
                android:textColor="@color/eerie_black"
                android:textSize="12sp"
                android:theme="@style/ThemeOverlay.SearchView" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_top_middle_box"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:visibility="gone"
            android:weightSum="2">

            <Button
                android:id="@+id/profile_booking"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/calendar_profile"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/my_booking"
                android:textColor="@color/grey_white"
                android:textSize="10sp" />

            <Button
                android:id="@+id/profile_settings"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/settings_profile"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/settings"
                android:textColor="@color/grey_white"
                android:textSize="10sp" />
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/profile_middle_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/profile_div"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/account_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/account_settings"
            android:textColor="@color/winter_white"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/recyclerView_box"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/profile_save_button"
            android:layout_below="@id/account_title"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:scrollbars="vertical" />
        </LinearLayout>

        <Button
            android:id="@+id/profile_save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="20dp"
            android:backgroundTint="@color/grey_white"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/save"
            android:textColor="@color/eerie_black"
            android:textSize="10sp"
            android:visibility="gone" />
    </RelativeLayout>


</RelativeLayout>