<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/eerie_black2">

    <ImageView
        android:id="@+id/backbutton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/back_arrow" />

    <TextView
        android:id="@+id/mybooking_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/pickedmybooking_underline"
        android:layout_centerInParent="true"
        android:text="@string/myBooking"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <LinearLayout
        android:id="@+id/pickedmybooking_underline"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="vertical"
        android:background="@color/eerie_black2"
        android:layout_below="@+id/backbutton"/>

    <RelativeLayout
        android:id="@+id/empty_mybooking_div"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/backbutton"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:background="@color/eerie_black2"
        android:visibility="visible">

        <ImageView
            android:id="@+id/empty_booking"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_centerInParent="true"
            android:scaleType="centerCrop"
            android:src="@drawable/mybooking_empty" />

        <TextView
            android:id="@+id/mybooking_empty_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/empty_booking"
            android:layout_centerInParent="true"
            android:text="@string/mybooking_empty_title"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/mybooking_empty_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mybooking_empty_title"
            android:layout_centerInParent="true"
            android:text="@string/empty_mybooking_desc"
            android:textColor="@color/grey_white"
            android:textSize="10sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/existing_mybooking_div"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pickedmybooking_underline"
        android:layout_centerInParent="true"
        android:visibility="gone">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:layout_margin="5dp"/>

    </RelativeLayout>

</RelativeLayout>